Fixed text align on material layouts.

--- a/packages/ketchup/src/components/kup-card/material/kup-card-material-1.scss
+++ b/packages/ketchup/src/components/kup-card/material/kup-card-material-1.scss
@@ -34,6 +34,7 @@
       letter-spacing: 0.0125em;
       padding: 0 1rem;
       padding-top: 1rem;
+      text-align: left;
     }
 
     .sub-2.subtitle {
@@ -44,6 +45,7 @@
       opacity: 0.6;
       padding: 0 1rem;
       padding-bottom: 1rem;
+      text-align: left;
     }
 
     .sub-2.description {
@@ -56,6 +58,7 @@
       opacity: 0.6;
       padding: 0 1rem;
       padding-bottom: 1rem;
+      text-align: left;
     }
   }
 
