--- a/packages/ketchup/src/components/kup-card/material/kup-card-material-3.scss
+++ b/packages/ketchup/src/components/kup-card/material/kup-card-material-3.scss
@@ -40,6 +40,7 @@
       letter-spacing: 0.0125em;
       padding: 0 1rem;
       padding-top: 1rem;
+      text-align: left;
     }
 
     .sub-1.subtitle {
@@ -51,6 +52,7 @@
       opacity: 0.6;
       padding: 0 1rem;
       padding-bottom: 1rem;
+      text-align: left;
     }
   }
 
@@ -68,6 +70,7 @@
       opacity: 0.6;
       padding: 0 1rem 8px;
       padding-top: 1rem;
+      text-align: left;
     }
   }
 
