--- a/packages/ketchup/src/components/kup-card/material/kup-card-material-4.scss
+++ b/packages/ketchup/src/components/kup-card/material/kup-card-material-4.scss
@@ -37,6 +37,7 @@
       letter-spacing: 0.0125em;
       padding: 0 1rem;
       padding-top: 1rem;
+      text-align: left;
     }
 
     .sub-1.subtitle {
@@ -47,6 +48,7 @@
       opacity: 0.6;
       padding: 0 1rem;
       padding-bottom: 1rem;
+      text-align: left;
     }
   }
 
